# paywall-checker

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  fly.toml  links.db  main.py  pyproject.toml  requirements.txt
src/paywall_checker/: api.py  auth.py  db.py  paywall.py  utils.py
static/: index.html
